# lng320-genz-slag-embedded

./: pyproject.toml
notebooks/: LNG320_Embedding.ipynb  LNG320_Similarity_Analysis.ipynb  LNG320_Thematic_Analysis.ipynb
