[project]
name = "lng320-genz-slang-embedded"
version = "0.1.0"
description = "LNG320 Gen Z Slang Embedding Analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "wordcloud>=1.9.0",
    "scikit-learn>=1.3.0",
    "textblob>=0.17.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
    "datasets>=2.14.0",
    "pinecone>=5.0.0",
    "openai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-pinecone>=0.2.0",
    "tqdm>=4.65.0",
    "threadpoolctl>=3.5.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
    "kaleido>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
